kubernetes/apps/storage/kopia/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-ui
spec:
  hostnames:
    - kopia.${DOMAIN_NAME}
  parentRefs:
    - name: envoy-internal
      namespace: envoy-system
  rules:
    - backendRefs:
        - name: shared-kopia-ui
          port: 51515
